--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /* styles.css */
 body {
     font-family: Arial, sans-serif;
-    background-image: url('path/to/your/image.jpg');
+    background-image: url('https://files.catbox.moe/hbnnzs.jpg');
     background-size: cover; /* Sesuaikan sesuai kebutuhan */
     background-position: center; /* Sesuaikan sesuai kebutuhan */
     background-repeat: no-repeat; /* Sesuaikan sesuai kebutuhan */
